--- a/templates/navegation.html
+++ b/templates/navegation.html
@@ -55,7 +55,7 @@
                         <a href="/kmeans">KMeans</a>
                       </li>
                       <li>
-                        <a href="#">DBSCAN</a>
+                        <a href="/dbscan">DBSCAN</a>
                       </li>
                     </ul>
                   </li>
@@ -64,7 +64,7 @@
                     <a><i class="fa fa-edit"></i> Predicción <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li>
-                        <a href="#">Árbol de Regresión</a>
+                        <a href="/prediction">Algoritmo de Predicción</a>
                       </li>
                     </ul>
                   </li>
@@ -73,7 +73,7 @@
                     <a><i class="fa fa-desktop"></i> Clasificación <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li>
-                        <a href="#">Árbol de Regresión</a>
+                        <a href="/clasification">Algoritmo de Clasificacion</a>
                       </li>
                     </ul>
                   </li>
